# homework_10_1

./: .flake8  README.md  main.py  pyproject.toml
src/: processing.py
