[project]
name = "homework-10-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Roman",email = "vehsylamor@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
mypy = "^1.16.1"
flake8 = "^7.3.0"
isort = "^6.0.1"
black = "^25.1.0"

[tool.isort]
line_length = 88

[tool.black]
line-length = 88
