[project]
name = "homework-10-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Roman",email = "vehsylamor@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
mypy = "^1.16.1"
flake8 = "^7.3.0"
isort = "^6.0.1"
black = "^25.1.0"

[tool.black]
# Максимальная длина строки
line-length = 119
exclude = '''
(\.git)
'''

[tool.isort]
# максимальная длина строки
line_length = 119


[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'
